kfreebsd-10 (10.0~svn238475-2) UNRELEASED; urgency=low

  * Add byacc to Build-Depends.

 -- Robert Millan <rmh@debian.org>  Sun, 22 Jul 2012 10:33:41 +0200

kfreebsd-10 (10.0~svn238475-1) experimental; urgency=low

  * New upstream snapshot.

 -- Robert Millan <rmh@debian.org>  Sun, 15 Jul 2012 14:09:47 +0200

kfreebsd-10 (10.0~svn237137-1) experimental; urgency=low

  * New upstream snapshot.
    - Fix for FreeBSD SA-12:06, aka CVE-2012-0217.  (Closes: #677299)

 -- Robert Millan <rmh@debian.org>  Fri, 15 Jun 2012 20:59:04 +0200

kfreebsd-10 (10.0~svn234760-1) experimental; urgency=low

  * New upstream snapshot.
    - r234743: Increase DFLDSIZ from 128 MiB to 32 GiB.  (Closes: #669174)

  [ Robert Millan ]
  * Import module lists from kernel-wedge, as they're being removed
    there (see 2.84).
  * Add USB modules to udebs.
  * 921_signal_watchdog.diff: Protection against unexpected new signals.
  * pty(4) was removed from GENERIC in 10-CURRENT (see rev 233271), but
    unfortunately glibc doesn't support pts(4) yet (see #667448).
    Reenable in sys/conf/DEBIAN.
  * 921_signal_watchdog.diff: Add a safety check to detect when the
    spares in struct sigevent are claimed by upstream (see #666454).
  * 101_nullfs_vsock.diff: Delete (superceeded by r232317).

 -- Robert Millan <rmh@debian.org>  Sun, 29 Apr 2012 12:20:18 +0200

kfreebsd-10 (10.0~svn233872-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Set -DWITHOUT_KERNEL_SYMBOLS MK knob to make lintian happy.
  * Replace 950_no_stack_protector.diff with -DWITHOUT_SSP build knob.
  * Misc adjustments to make it possible to build with Clang (if enabled
    in debian/rules).
  * Remove ALTQ_NOPCC in kernel configs, it is no longer required by SMP
    systems (see altq_subr.c).
  * Defer SMP kernel option to upstream config.
  * Merge 952_nodebug.diff and the debug bits of
    debian/arch/i386/xen.config into sys/conf/DEBIAN.
