@@ -13,3 +13,11 @@ Partially sent to freebsd-hackers (2011-07-02)
  
  # Correct path for kernel builds
  # Don't rely on the kernel's .depend file
+@@ -24,7 +27,6 @@
+ DEPENDFILE=	.depend_aicasm
+ .endif
+ 
+-CFLAGS+= -I.
+ .ifdef MAKESRCPATH
+ CFLAGS+= -I${MAKESRCPATH}
+ .endif
