@@ -1,6 +1,7 @@
 kfreebsd-10 (10.0~svn238475-2) UNRELEASED; urgency=low
 
   * Add byacc to Build-Depends.
+  * Remove broken -I. from aicasm CFLAGS.
 
  -- Robert Millan <rmh@debian.org>  Sun, 22 Jul 2012 10:33:41 +0200
 
